# CortexSec

./: .gitignore  CONTRIBUTING.md  DEEP_THINKING_AGENT.md  Dockerfile  ENHANCEMENTS.md  LICENSE  PRODUCTION_ORCHESTRATOR_V1_ROADMAP.md  README.md  TERMINAL_EXECUTION.md  USER_GUIDE.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
ai_pentest/: __init__.py
ai_pentest/agents/: __init__.py  attack_simulation.py  attack_surface_agent.py  exploitability_agent.py  memory_agent.py  reasoning_agent.py  recon.py  report_agent.py  risk_agent.py  vuln_analysis.py
ai_pentest/cli/: __init__.py  main.py
ai_pentest/core/: __init__.py  agent.py  planner.py
ai_pentest/llm/: __init__.py  anthropic.py  factory.py  gemini.py  openai.py
ai_pentest/utils/: http_security.py
cortexsec/: __init__.py
cortexsec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cortexsec/agents/: __init__.py  attack_simulation.py  attack_surface_agent.py  autonomous_exploit_agent.py  browser_autonomous_agent.py  competitive_planning_agent.py  deep_thinking_agent.py  exploitability_agent.py  memory_agent.py  network_analyzer.py  payload_agent.py  real_world_guidance.py  reasoning_agent.py  recon.py  remediation_advisor.py  report_agent.py  risk_agent.py  scientist_agent.py  secrets_scanner.py  terminal_enabled_agent.py  threat_intel_agent.py  vuln_analysis.py  web_app_scanner.py  zero_day_detector.py
cortexsec/api/: __init__.py  contracts.py  service.py
cortexsec/app/: config.py  logging_config.py
cortexsec/cli/: main.py
cortexsec/core/: agent.py  agent_communication.py  agent_skills.py  audit.py  autonomy.py  planner.py  sandbox.py  terminal_executor.py
cortexsec/engine/: cli_engine.py
cortexsec/gui/: tk_app.py
cortexsec/llm/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  gemini.py  local_gguf.py  ollama.py  openai.py
cortexsec/plugins/: __init__.py  base.py  builtin.py  extended_plugins.py
cortexsec/telemetry/: benchmark.py
cortexsec/tools/: __init__.py  base.py  extended_adapters.py  nmap_adapter.py  zap_adapter.py
cortexsec/utils/: compliance_mapping.py  scope_utils.py
debian/: changelog  control  cortexsec.install  rules
docs/: HYBRID_ARCHITECTURE.md  TECHNICAL_ROADMAP.md  architecture_graph.md
docs/releases/: v0.3.0.md
docs/research/: autonomy-implementation-plan.md
tests/: test_agent_communication.py  test_agents.py  test_audit_logging.py  test_autonomous_exploit_agent.py  test_autonomy_loop.py  test_browser_autonomous_agent.py  test_competitive_planning_agent.py  test_compliance_mapping.py  test_deep_thinking_agent.py  test_extended_integrations.py  test_hybrid_architecture.py  test_llm_factory.py  test_network_analyzer.py  test_production_cli.py  test_remediation_advisor.py  test_sandboxing.py  test_scope_validation.py  test_terminal_executor.py  test_tool_manager.py  test_web_app_scanner.py  test_zero_day_detector.py
