[project]
name = "cortexsec"
version = "0.1.0"
description = "CortexSec - Autonomous AI Multi-Agent Pentesting Framework"
authors = [{ name = "Raja Muhammad Awais", email = "muhammadawaisturk1@gmail.com" }]
dependencies = [
    "typer[all]",
    "rich",
    "openai",
    "anthropic",
    "google-generativeai",
    "pydantic",
    "python-dotenv",
    "requests",
    "pyyaml",
    "fpdf2",
    "cryptography"
]

[project.scripts]
cortexsec = "ai_pentest.cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
