[project]
name = "cortexsec"
version = "0.3.0"
description = "CortexSec - Autonomous AI Multi-Agent Pentesting Framework"
authors = [{ name = "Raja Muhammad Awais", email = "muhammadawaisturk1@gmail.com" }]
license = "MIT"
dependencies = [
    "typer[all]",
    "rich",
    "openai",
    "anthropic",
    "google-generativeai",
    "pydantic",
    "python-dotenv",
    "requests",
    "pyyaml",
    "fpdf2",
    "cryptography"
]

[project.scripts]
cortexsec = "cortexsec.cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
